docs/core/v0.3/_sources/reference/tmlt/core/measurements/spark_measurements/index.rst.txt



*************************
spark_measurements
*************************

.. py:module:: tmlt.core.measurements.spark_measurements

.. autoapi-nested-parse::

   Measurements on Spark DataFrames.











Classes
=======

.. list-table::

   * - :class:`.SparkMeasurement`
     - Base class that materializes output DataFrames before returning.
   * - :class:`.AddNoiseToColumn`
     - Adds noise to a single aggregated column of a Spark DataFrame.
   * - :class:`.ApplyInPandas`
     - Applies a pandas dataframe aggregation to each group in a GroupedDataFrame.

   
.. py:class:: SparkMeasurement(input_domain, input_metric, output_measure, is_interactive)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Base class that materializes output DataFrames before returning.






   .. automethod:: __init__
   .. py:method:: call(self, val)
      :abstractmethod:

      Performs measurement.

      .. warning::

         Spark recomputes the output of this method (adding different noise
         each time) on every call to collect.


   .. py:method:: __call__(self, val)

      Performs measurement and returns a DataFrame with additional protections.

      See :ref:`pseudo-side-channel-mitigations` for more details on the specific
      mitigations we apply here.


   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure(self)
      :property:

      Distance measure on output.


   .. py:method:: is_interactive(self)
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_function(self, d_in)

      Returns the smallest d_out satisfied by the measurement.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: privacy_relation(self, d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
.. py:class:: AddNoiseToColumn(input_domain, measurement, measure_column)

   Bases: :class:`SparkMeasurement`

   Adds noise to a single aggregated column of a Spark DataFrame.

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from tmlt.core.measurements.noise_mechanisms import (
       ...     AddLaplaceNoise,
       ... )
       >>> from tmlt.core.measurements.pandas_measurements.series import (
       ...     AddNoiseToSeries,
       ... )
       >>> from tmlt.core.domains.numpy_domains import NumpyIntegerDomain
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkDataFrameDomain,
       ...     SparkIntegerColumnDescriptor,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a1", "a2", "a2"],
       ...             "B": ["b1", "b2", "b1", "b2"],
       ...             "count": [3, 2, 1, 0],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A   B  count
   0  a1  b1      3
   1  a1  b2      2
   2  a2  b1      1
   3  a2  b2      0
   >>> # Create a measurement that can add noise to a pd.Series
   >>> add_laplace_noise = AddLaplaceNoise(
   ...     scale="0.5",
   ...     input_domain=NumpyIntegerDomain(),
   ... )
   >>> # Create a measurement that can add noise to a Spark DataFrame
   >>> add_laplace_noise_to_column = AddNoiseToColumn(
   ...     input_domain=SparkDataFrameDomain(
   ...         schema={
   ...             "A": SparkStringColumnDescriptor(),
   ...             "B": SparkStringColumnDescriptor(),
   ...             "count": SparkIntegerColumnDescriptor(),
   ...         },
   ...     ),
   ...     measurement=AddNoiseToSeries(add_laplace_noise),
   ...     measure_column="count",
   ... )
   >>> # Apply measurement to data
   >>> noisy_spark_dataframe = add_laplace_noise_to_column(spark_dataframe)
   >>> print_sdf(noisy_spark_dataframe) # doctest: +ELLIPSIS +NORMALIZE_WHITESPACE
       A   B   count
   0  a1  b1 ...
   1  a1  b2 ...
   2  a2  b1 ...
   3  a2  b2 ...

   Measurement Contract:
       * Input domain - :class:`~.SparkDataFrameDomain`
       * Output type - Spark DataFrame
       * Input metric - :class:`~.OnColumn` with metric
         `SumOf(SymmetricDifference())` (for :class:`~.PureDP`) or
         `RootSumOfSquared(SymmetricDifference())` (for :class:`~.RhoZCDP`) on each
         column.
       * Output measure - :class:`~.PureDP` or :class:`~.RhoZCDP`

       >>> add_laplace_noise_to_column.input_domain
       SparkDataFrameDomain(schema={'A': SparkStringColumnDescriptor(allow_null=False), 'B': SparkStringColumnDescriptor(allow_null=False), 'count': SparkIntegerColumnDescriptor(allow_null=False, size=64)})
       >>> add_laplace_noise_to_column.input_metric
       OnColumn(column='count', metric=SumOf(inner_metric=AbsoluteDifference()))
       >>> add_laplace_noise_to_column.output_measure
       PureDP()

       Privacy Guarantee:
           :class:`~.AddNoiseToColumn`'s :meth:`~.privacy_function` returns the output of
           privacy function on the :class:`~.AddNoiseToSeries` measurement.

           >>> add_laplace_noise_to_column.privacy_function(1)
           2






   .. automethod:: __init__
   .. py:method:: measure_column(self)
      :property:

      Returns the name of the column to add noise to.


   .. py:method:: measurement(self)
      :property:

      Returns the :class:`~.AddNoiseToSeries` measurement to apply to measure column.


   .. py:method:: privacy_function(self, d_in)

      Returns the smallest d_out satisfied by the measurement.

      See the privacy and stability tutorial for more information. # TODO(#1320)

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If the :meth:`~.Measurement.privacy_function` of the
          :class:`~.AddNoiseToSeries` measurement raises :class:`NotImplementedError`.


   .. py:method:: call(self, sdf)

      Applies measurement to measure column.


   .. py:method:: __call__(self, val)

      Performs measurement and returns a DataFrame with additional protections.

      See :ref:`pseudo-side-channel-mitigations` for more details on the specific
      mitigations we apply here.


   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure(self)
      :property:

      Distance measure on output.


   .. py:method:: is_interactive(self)
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(self, d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
.. py:class:: ApplyInPandas(input_domain, input_metric, aggregation_function)

   Bases: :class:`SparkMeasurement`

   Applies a pandas dataframe aggregation to each group in a GroupedDataFrame.






   .. automethod:: __init__
   .. py:method:: aggregation_function(self)
      :property:

      Returns the aggregation function.


   .. py:method:: input_domain(self)
      :property:

      Returns input domain.


   .. py:method:: privacy_function(self, d_in)

      Returns the smallest d_out satisfied by the measurement.

      See the privacy and stability tutorial for more information. # TODO(#1320)

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If self.aggregation_function.privacy_function(d_in)
          raises :class:`NotImplementedError`.


   .. py:method:: call(self, grouped_dataframe)

      Returns DataFrame obtained by applying pandas aggregation to each group.


   .. py:method:: __call__(self, val)

      Performs measurement and returns a DataFrame with additional protections.

      See :ref:`pseudo-side-channel-mitigations` for more details on the specific
      mitigations we apply here.


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure(self)
      :property:

      Distance measure on output.


   .. py:method:: is_interactive(self)
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(self, d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.






